Adjust the community page
This is how things are done with Hugo.

While at it, remove trailing whitespace.

Signed-off-by: Matt Burke <spraints@gmail.com>
Signed-off-by: Johannes Schindelin <johannes.schindelin@gmx.de>

--- a/content/community/_index.html
+++ b/content/community/_index.html
@@ -1,11 +1,10 @@
-<% @section = "community" %>
-<% @subsection = "" %>
-<% @page_title = "Git - Community" %>
-
-<% content_for :sidebar do %>
-  <%= render 'shared/book' %>
-<% end %>
-
+---
+section: "community"
+title: "Community - Git"
+url: /community.html
+aliases:
+- /community/index.html
+---
 <div id="main">
   <h1> Community</h1>
 
@@ -108,3 +107,4 @@
   <p>
     The <a href="https://git.github.io/">Git Developer Pages</a> have a <a href="https://git.github.io/Hacking-Git/">Hacking Git page</a> which lists useful development resources. They also have <a href="https://git.github.io/General-Application-Information/">information</a> for people applying to work on Git as part of programs like <a href="https://www.outreachy.org/">Outreachy</a> or the <a href="https://summerofcode.withgoogle.com/">Google Summer of Code</a>.
   </p>
+</div>
