Use relative URLs
To be able to develop git-scm.com changes in a personal fork (where the
URL is of the form `https://user.github.io/git-scm.com/`, i.e. the site
is _not_ located at the root directory) as well as reuse the result in
the main repository (where the site does live in the root directory), it
is highly recommended to use relative URLs where possible.

This is particularly necessary because we want
https://git.github.io/git-scm.com/ to render correctly, too.

This trick is a bit tricky because Hugo's `relURL` function is only
available in the `layouts/` directory, and our custom `relurl` shortcode
has to be used inside `content/`, and the trick was performed by:

  sed -i 's,\(href=\|src=\)["'\'']/\([^{"'\'']*\)["'\''],\1"{{< relurl "\2" >}}",g' \
    $(git ls-files content/\*.html)

  sed -i 's,\(href=\|src=\|action=\)["'\'']/\([^{"'\'']*\)["'\''],\1"{{ relURL "\2" }}",g' \
    $(git ls-files ':^content/' \*.html)

Signed-off-by: Johannes Schindelin <johannes.schindelin@gmx.de>

--- a/content/community/_index.html
+++ b/content/community/_index.html
@@ -48,7 +48,7 @@ aliases:
 
   <p>
     If you are using git 2.27.0 or later, you can run
-    <a href="/docs/git-bugreport"><span class="fixed">git bugreport</span></a> in the repository
+    <a href="{{< relurl "docs/git-bugreport" >}}"><span class="fixed">git bugreport</span></a> in the repository
     where you observed the bug,
     which generates a template to guide you through writing a useful bug
     report and gathers some diagnostic information about your
@@ -101,7 +101,7 @@ aliases:
   <h2> Contributing to Git </h2>
 
   <p>
-    The <a href="https://github.com/git/git/tree/master/Documentation">Documentation directory</a> in the Git source code has several files of interest to developers who are looking to help contribute. After reading the <a href="https://github.com/git/git/blob/master/Documentation/CodingGuidelines">coding guidelines</a> and <a href="https://github.com/git/git/blob/master/CODE_OF_CONDUCT.md">code of conduct</a>, you can learn <a href="/docs/SubmittingPatches">how to submit patches</a>. If you are just starting out, you can read the <a href="/docs/MyFirstContribution">My First Contribution tutorial</a>. For those looking to get more deeply involved, there is a <a href="https://github.com/git/git/blob/master/Documentation/howto/maintain-git.txt">howto for Git maintainers</a>.
+    The <a href="https://github.com/git/git/tree/master/Documentation">Documentation directory</a> in the Git source code has several files of interest to developers who are looking to help contribute. After reading the <a href="https://github.com/git/git/blob/master/Documentation/CodingGuidelines">coding guidelines</a> and <a href="https://github.com/git/git/blob/master/CODE_OF_CONDUCT.md">code of conduct</a>, you can learn <a href="{{< relurl "docs/SubmittingPatches" >}}">how to submit patches</a>. If you are just starting out, you can read the <a href="{{< relurl "docs/MyFirstContribution" >}}">My First Contribution tutorial</a>. For those looking to get more deeply involved, there is a <a href="https://github.com/git/git/blob/master/Documentation/howto/maintain-git.txt">howto for Git maintainers</a>.
   </p>
 
   <p>
