book: update en
Updated via the `update-book.yml` GitHub workflow.

--- a/external/book/content/book/en/v2/Appendix-C:-Git-Commands-Setup-and-Config.html
+++ b/external/book/content/book/en/v2/Appendix-C:-Git-Commands-Setup-and-Config.html
@@ -111,7 +111,7 @@ There are several files this command will read from and write to so you can set 
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Notepad++ (Windows 64-bit)</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock"><code>git config --global core.editor "'C:\Program Files\Notepad\notepad.exe' -multiInst -notabbar -nosession -noPlugin"</code> (Also see note below)</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><code>git config --global core.editor "'C:\Program Files\Notepad++\notepad++.exe' -multiInst -notabbar -nosession -noPlugin"</code> (Also see note below)</p></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Scratch (Linux)</p></td>
