--- a/external/book/content/book/en/v2/Git-Tools-Credential-Storage.html
+++ b/external/book/content/book/en/v2/Git-Tools-Credential-Storage.html
@@ -286,7 +286,7 @@ OptionParser.new do |opts|
 end.parse!
 
 exit(0) unless ARGV[0].downcase == 'get' # <b class="conum">(2)</b>
-exit(0) unless File.exists? path
+exit(0) unless File.exist? path
 
 known = {} # <b class="conum">(3)</b>
 while line = STDIN.gets
