--- a/external/book/content/book/en/v2/_index.html
+++ b/external/book/content/book/en/v2/_index.html
@@ -8,10 +8,10 @@ book:
   language_code: en
   front_page: true
   repository_url: https://github.com/progit/progit2
-  sha: 1ca265b8a417b65aebba78c27ac983104ce84a21
-  ebook_pdf: https://github.com/progit/progit2/releases/download/2.1.430/progit.pdf
-  ebook_epub: https://github.com/progit/progit2/releases/download/2.1.430/progit.epub
-  ebook_mobi: https://github.com/progit/progit2/releases/download/2.1.430/progit.mobi
+  sha: b3af68c326647bb91c4f73fff6abb9e1a6bd52c8
+  ebook_pdf: https://github.com/progit/progit2/releases/download//progit.pdf
+  ebook_epub: https://github.com/progit/progit2/releases/download//progit.epub
+  ebook_mobi: https://github.com/progit/progit2/releases/download//progit.mobi
 page_title: Git - Book
 url: "/book/en/v2.html"
 aliases:
