--- a/external/book/content/book/en/v2/_index.html
+++ b/external/book/content/book/en/v2/_index.html
@@ -9,9 +9,9 @@ book:
   front_page: true
   repository_url: https://github.com/progit/progit2
   sha: b3af68c326647bb91c4f73fff6abb9e1a6bd52c8
-  ebook_pdf: https://github.com/progit/progit2/releases/download//progit.pdf
-  ebook_epub: https://github.com/progit/progit2/releases/download//progit.epub
-  ebook_mobi: https://github.com/progit/progit2/releases/download//progit.mobi
+  ebook_pdf: https://github.com/progit/progit2/releases/download/2.1.432/progit.pdf
+  ebook_epub: https://github.com/progit/progit2/releases/download/2.1.432/progit.epub
+  ebook_mobi: https://github.com/progit/progit2/releases/download/2.1.432/progit.mobi
 page_title: Git - Book
 url: "/book/en/v2.html"
 aliases:
